welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:8: error: illegal start of simple expression
    } else if (nums(i) > max2 && nums(i) != max)) {
                                                ^